Fix next question  button overlapping to the left

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,9 +131,10 @@ input:hover {
 
 .next-question {
     position: relative;
-    left: 88%;
-    height: 6.5vh;
-    width: 9.5vw;
+    left: 86%;
+    height: 8%;
+    top:5%;
+    padding:1% 0;
     transition: transform .2s;
     border: none;
     font-weight: 900;
@@ -218,11 +219,4 @@ input:hover {
         width: 20%;
     }
 }
-@media screen and (min-width:1100px) and (max-width:1400px) {
 
-    .next-question {
-        left: 70%;
-        height: 9%;
-        width: 24%;
-    }
-}
